# miipher

./: IMPLEMENTATION_SUMMARY.md  PLACEHOLDER_REMOVAL_SUMMARY.md  README_MIIPHER2.md  README_REAL_IMPLEMENTATIONS.md  pyproject.toml  requirements_miipher2.txt  setup_miipher2.py
examples/: demo_miipher2.py  demo_miipher2_real.py  train_miipher2.py
examples/configs/: config_miipher2.yaml
src/miipher/: lightning_module_miipher2.py
src/miipher/dataset/: datamodule_miipher2.py
src/miipher/model/: miipher2.py  usm_integration.py  wavefit_integration.py
tests/: test_miipher2.py
